[package]
name = "rust-luau-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
mlua = { version = "0.9.7", features = ["luau"]}